[package]
name = "toison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
human_format = "1"
serde_json = "1"
thousands = "0.2"
term_size = "0.3"
