[package]
name = "toison"
version = "1.1.0"
license = "EUPL-1.2"
edition = "2021"
description = "Visualize size distribution of JSON files"
readme = "README.org"
homepage = "https://github.com/delehef/toison"
repository = "https://github.com/delehef/toison"
keywords = ["cli", "json", "visualization"]
categories = ["command-line-utilities", "visualization"]
exclude = ["images/", ".*"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
human_format = "1"
serde_json = "1"
thousands = "0.2"
term_size = "0.3"
